# jobo-scrapper

./: README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: codecov.yml  python-package.yml  python-publish.yml
jobo-scraper/: pyproject.toml
jobo-scraper/jobo_scraper/: __init__.py  scraper.py
jobo-scraper/tests/: test_jobo_scraper.py
jobo_scraper/: __init__.py  logging_messages.py  scraper.py
tests/: __init__.py  test_jobo_scraper.py
