[tool.poetry]
name = "jobo-scraper"
version = "0.1.3"
description = "Jobo web scraper for get the current available events."
authors = ["Luis Gómez Alonso <luis.gomez.alonso95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
